force-app/main/default/objects/Product__c/fields/Size_of_a_block__c.field-meta.xml
<CustomField>
    <fullName>Size_of_a_block__c</fullName>
    <description>This field denotes the Unit Size.</description>
    <label>Size of a Block</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>