force-app/main/default/objects/Product__c/fields/Unit_Label__c.field-meta.xml
<CustomField>
    <fullName>Unit_Label__c</fullName>
    <description>This field denotes unit of Size field</description>
    <label>Unit Label</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Unit_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MB</fullName>
            </value>
            <value>
                <fullName>GB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>