force-app/main/default/objects/Product__c/fields/Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>Unit_Type__c</fullName>
    <description>This field denotes the Type.</description>
    <label>Unit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>License</fullName>
            </value>
            <value>
                <fullName>Blocks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>